// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Test: Org1 Queries query commits of document 1`] = `
Array [
  Object {
    "entityName": "document",
    "events": Array [
      Object {
        "type": "DocumentRestricted",
      },
    ],
    "version": 2,
  },
  Object {
    "entityName": "document",
    "events": Array [
      Object {
        "type": "DocumentTitleDefined",
      },
    ],
    "version": 1,
  },
  Object {
    "entityName": "document",
    "events": Array [
      Object {
        "type": "DocumentCreated",
      },
      Object {
        "type": "DocumentReferenceDefined",
      },
      Object {
        "type": "DocumentLoanIdDefined",
      },
      Object {
        "type": "DocumentTitleDefined",
      },
    ],
    "version": 0,
  },
]
`;

exports[`Unit Test: Org1 Queries query commits of loan 1`] = `
Array [
  Object {
    "entityName": "loan",
    "events": Array [
      Object {
        "type": "LoanReturned",
      },
    ],
    "version": 1,
  },
  Object {
    "entityName": "loan",
    "events": Array [
      Object {
        "type": "LoanApplied",
      },
      Object {
        "type": "LoanReferenceDefined",
      },
      Object {
        "type": "LoanDescriptionDefined",
      },
      Object {
        "type": "LoanCommentDefined",
      },
    ],
    "version": 0,
  },
]
`;

exports[`Unit Test: Org1 Queries query document by id 1`] = `
Object {
  "contents": Object {
    "content": Object {
      "body": "{ \\"message\\": \\"Unit test org1 doc-contents 0\\" }",
    },
  },
  "loan": Object {
    "description": "Unit test org1 loan 0",
    "details": Object {
      "approvedAmt": null,
      "comment": "Unit test org1 loanDetails 0 EDITED",
      "contact": Object {
        "email": "c0000@fake.it",
        "name": "Contact 0",
        "phone": "555-9999",
        "salutation": null,
        "title": null,
      },
      "currency": "USD",
      "loanType": null,
      "requestedAmt": 40.9,
      "requester": Object {
        "name": "Loan Requester 0",
        "registration": "BR1234567XXX0",
        "type": null,
      },
      "startDate": "1574846420900",
      "tenor": 50,
    },
    "ownerId": "unitTestUser",
    "reference": "REF-UNIT-TEST-ORG1-LOAN-0",
    "status": 0,
  },
  "ownerId": "unitTestUser",
  "reference": "REF-UNIT-TEST-ORG1-DOC-0",
  "status": 0,
  "title": "Unit test org1 document 0",
}
`;

exports[`Unit Test: Org1 Queries query loan 0 by id 1`] = `
Object {
  "description": "Unit test org1 loan 0",
  "details": Object {
    "approvedAmt": null,
    "comment": "Unit test org1 loanDetails 0 EDITED",
    "contact": Object {
      "email": "c0000@fake.it",
      "name": "Contact 0",
      "phone": "555-9999",
      "salutation": null,
      "title": null,
    },
    "currency": "USD",
    "loanType": null,
    "requestedAmt": 40.9,
    "requester": Object {
      "name": "Loan Requester 0",
      "registration": "BR1234567XXX0",
      "type": null,
    },
    "startDate": "1574846420900",
    "tenor": 50,
  },
  "documents": Array [
    Object {
      "contents": Object {
        "content": Object {
          "body": "{ \\"message\\": \\"Unit test org1 doc-contents 0\\" }",
        },
      },
      "reference": "REF-UNIT-TEST-ORG1-DOC-0",
      "status": 0,
      "title": "Unit test org1 document 0",
    },
    Object {
      "contents": Object {
        "content": Object {
          "format": "PDF",
          "link": "http://fake.it/docs/org1UnitTestDocContents-1.pdf",
        },
      },
      "reference": "REF-UNIT-TEST-ORG1-DOC-1",
      "status": 2,
      "title": "Unit test org1 document 1 EDITED",
    },
    Object {
      "contents": null,
      "reference": "REF-UNIT-TEST-ORG1-DOC-2",
      "status": 1,
      "title": "Unit test org1 document 2",
    },
  ],
  "ownerId": "unitTestUser",
  "reference": "REF-UNIT-TEST-ORG1-LOAN-0",
  "status": 0,
}
`;

exports[`Unit Test: Org1 Queries query loan 1 by id 1`] = `
Object {
  "description": "Unit test org1 loan 1",
  "details": Object {
    "approvedAmt": null,
    "comment": "Unit test org1 loanDetails 1 EDITED",
    "contact": Object {
      "email": "c0001@fake.it",
      "name": "Contact 1",
      "phone": "555-9998",
      "salutation": null,
      "title": null,
    },
    "currency": "HKD",
    "loanType": null,
    "requestedAmt": 41.9,
    "requester": Object {
      "name": "Loan Requester 1",
      "registration": "BR1234567XXX1",
      "type": null,
    },
    "startDate": "1574846420901",
    "tenor": 51,
  },
  "documents": Array [
    Object {
      "contents": null,
      "reference": "REF-UNIT-TEST-ORG1-DOC-3",
      "status": 0,
      "title": "Unit test org1 document 3",
    },
  ],
  "ownerId": "unitTestUser",
  "reference": "REF-UNIT-TEST-ORG1-LOAN-1",
  "status": 1,
}
`;

exports[`Unit Test: Org1 Queries query loan 2 by id 1`] = `
Object {
  "description": "Unit test org1 loan 2 EDITED",
  "details": null,
  "documents": Array [
    Object {
      "contents": null,
      "reference": "REF-UNIT-TEST-ORG1-DOC-4",
      "status": 0,
      "title": "Unit test org1 document 4",
    },
  ],
  "ownerId": "unitTestUser",
  "reference": "REF-UNIT-TEST-ORG1-LOAN-2",
  "status": 2,
}
`;

exports[`Unit Test: Org1 Queries query loan 3 by id 1`] = `
Object {
  "description": "Unit test org1 loan 3",
  "details": null,
  "documents": Array [
    Object {
      "contents": null,
      "reference": "REF-UNIT-TEST-ORG1-DOC-5",
      "status": 0,
      "title": "Unit test org1 document 5",
    },
  ],
  "ownerId": "unitTestUser",
  "reference": "REF-UNIT-TEST-ORG1-LOAN-3",
  "status": 3,
}
`;

exports[`Unit Test: Org1 Queries query loan 4 by id 1`] = `
Object {
  "description": "Unit test org1 loan 4",
  "details": null,
  "documents": Array [
    Object {
      "contents": null,
      "reference": "REF-UNIT-TEST-ORG1-DOC-6",
      "status": 0,
      "title": "Unit test org1 document 6",
    },
  ],
  "ownerId": "unitTestUser",
  "reference": "REF-UNIT-TEST-ORG1-LOAN-4",
  "status": 4,
}
`;

exports[`Unit Test: Org1 Queries query loan 5 by id 1`] = `
Object {
  "description": "Unit test org1 loan 5",
  "details": null,
  "documents": Array [
    Object {
      "contents": null,
      "reference": "REF-UNIT-TEST-ORG1-DOC-7",
      "status": 0,
      "title": "Unit test org1 document 7",
    },
  ],
  "ownerId": "unitTestUser",
  "reference": "REF-UNIT-TEST-ORG1-LOAN-5",
  "status": 5,
}
`;
